--- a/telegram_bot.service
+++ b/telegram_bot.service
@@ -1,6 +1,8 @@
 [Unit]
 Description=Telegram Source Bot Service
 After=network.target
+Wants=network-online.target
+AssertPathExists=/home/runner/${REPL_SLUG}
 
 [Service]
 Type=simple
@@ -8,9 +10,17 @@ User=runner
 WorkingDirectory=/home/runner/${REPL_SLUG}
 Environment=PYTHONUNBUFFERED=1
 Environment=PATH=/nix/var/nix/profiles/default/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+EnvironmentFile=/home/runner/${REPL_SLUG}/.env
 ExecStart=/usr/bin/python3 bot.py
 Restart=always
 RestartSec=10
+TimeoutStartSec=60
+TimeoutStopSec=30
+KillMode=mixed
+
+NoNewPrivileges=true
+ProtectSystem=full
+ProtectHome=read-only
 
 [Install]
 WantedBy=multi-user.target
